# advent24cpp

./: .gitignore  CMakeLists.txt
common/: common.hh
day01/: lib.hh  main.cc  test.cc
day02/: lib.hh  main.cc  test.cc
day03/: lib.hh  main.cc  test.cc
day04/: lib.hh  main.cc  test.cc
day05/: lib.hh  main.cc  test.cc
day06/: draw.hh  lib.hh  main.cc  test.cc
day07/: lib.hh  main.cc  test.cc
